# did-the-rockies-get-a-double-yesterday

./: .gitignore  README.md  app.py  double.py  pyproject.toml  requirements.txt  services.py
app/: __init__.py  double.py  services.py
app/static/: script.js  style.css
app/templates/double/: index.html
backend/: README.md  app.py  requirements.txt  services.py  test.py
backend/static/: script.js  style.css
frontend/: package-lock.json  package.json
static/: script.js  style.css
templates/double/: index.html
