[tool.poetry]
name = "rockies-doubles"
version = "0.1.0"
description = "A basic app that checks to see if the rockies got a double yesterday."
authors = ["John Finley <j.finley92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
